// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BigButton it should render with dropdown closed 1`] = `
<aux>
  <button
    className="Button"
    onClick={[Function]}
  >
    <table
      className="Table"
    >
      <tbody>
        <tr>
          <td>
            <Svg
              icon="<svg height=\\"16\\" viewBox=\\"0 0 24 24\\" width=\\"16\\"><path d=\\"M0 0h24v24H0z\\" fill=\\"none\\"></path><path d=\\"M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z\\"></path></svg>"
            />
          </td>
        </tr>
        <tr>
          <td>
            Button
          </td>
        </tr>
      </tbody>
    </table>
  </button>
</aux>
`;

exports[`BigButton it should render with dropdown open 1`] = `
<aux>
  <button
    className="Button"
    onClick={[Function]}
  >
    <table
      className="Table"
    >
      <tbody>
        <tr>
          <td>
            <Svg
              icon="<svg height=\\"16\\" viewBox=\\"0 0 24 24\\" width=\\"16\\"><path d=\\"M0 0h24v24H0z\\" fill=\\"none\\"></path><path d=\\"M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z\\"></path></svg>"
            />
          </td>
        </tr>
        <tr>
          <td>
            Button
          </td>
        </tr>
      </tbody>
    </table>
  </button>
  <dropDownMenu
    close={[Function]}
  >
    <Connect(BoxAlignMenu) />
  </dropDownMenu>
</aux>
`;
